# elf3d

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CODING_POLICY.md  CONTRIBUTING.md  LICENSE  PROJECT_STATE_EN.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY.md
apps/viewer/: CMakeLists.txt
apps/viewer/src/: main.cpp  viewer_assets.cpp  viewer_browser.cpp  viewer_browser_context.cpp  viewer_browser_platform.cpp  viewer_chrome.cpp  viewer_input_math.cpp  viewer_input_math.hpp  viewer_internal.hpp  viewer_panels.cpp  viewer_performance_csv.cpp  viewer_preferences.cpp  viewer_retained_frame.cpp  viewer_runtime.cpp  viewer_scene_panels.cpp  viewer_status.cpp  viewer_viewport.cpp
apps/viewer/tests/: viewer_behavior_test.cpp
facade/elf3d/: CMakeLists.txt
facade/elf3d/src/: engine.cpp  scene.cpp  viewport.cpp  viewport_impl.h
integrations/imgui/: CMakeLists.txt
integrations/imgui/include/elf3d/imgui/: context.h  texture.h
integrations/imgui/src/: context.cpp  texture.cpp
modules/: CMakeLists.txt
modules/assets/: CMakeLists.txt
modules/assets/include/elf3d/assets/: handle_access.h  (+1 more)
modules/assets/src/: elf.assets.cppm  storage.cpp
modules/assets/tests/: CMakeLists.txt  assets_test.cpp
modules/backend_opengl/: CMakeLists.txt
modules/backend_opengl/src/: device.cpp  device_indexed_draw.cpp  device_internal.hpp  device_overlay.cpp  device_picking.cpp  device_resources.cpp  device_state.cpp  device_targets.cpp  elf.backend.opengl.cppm
modules/clipping/: CMakeLists.txt
modules/clipping/src/: elf.clipping.cppm  filter.cpp
modules/clipping/tests/: CMakeLists.txt  clipping_test.cpp
modules/core/: CMakeLists.txt
modules/core/src/: diagnostics.cpp  elf.core.cppm  version_data.cpp
modules/core/tests/: CMakeLists.txt  core_vocabulary_test.cpp
modules/gltf/: CMakeLists.txt
modules/gltf/src/: buffer_layout_repair.hpp  elf.gltf.cppm  exporter.cpp  exporter_image.cpp  exporter_internal.hpp  exporter_json.cpp  exporter_json_format.cpp  exporter_json_internal.hpp  exporter_json_writer.cpp  exporter_output.cpp  importer.cpp  importer_assets.cpp  importer_document.cpp  importer_encoding.cpp  importer_geometry.cpp  importer_geometry_build.cpp  importer_input.cpp  importer_internal.hpp  importer_material.cpp  importer_metadata.cpp  importer_texture.cpp  importer_validation.cpp
modules/gltf/tests/: CMakeLists.txt  gltf_exporter_test.cpp  gltf_importer_test.cpp  gltf_metadata_round_trip_test.cpp
modules/graphics/: CMakeLists.txt
modules/graphics/src/: device.cpp  elf.graphics.cppm
modules/image/: CMakeLists.txt
modules/image/src/: elf.image.cppm  image_decoder.cpp  stb_image_implementation.cpp
modules/image/tests/: CMakeLists.txt  image_decoder_test.cpp
modules/interaction/: CMakeLists.txt
modules/interaction/src/: elf.interaction.cppm  viewport_interaction.cpp
modules/interaction/tests/: CMakeLists.txt  viewport_interaction_test.cpp
modules/math/: CMakeLists.txt
modules/math/src/: conventions.cpp  elf.math.cppm
modules/math/tests/: CMakeLists.txt  math_conventions_test.cpp
modules/model/src/: document.cpp  document_metadata.cpp  document_mutation.cpp  document_validation.cpp  document_views.cpp  elf.model.cppm
modules/model/tests/: model_document_test.cpp  model_processing_test.cpp
modules/navigation/: CMakeLists.txt
modules/navigation/src/: elf.navigation.cppm  orbit_navigation.cpp  orbit_navigation_detail.h  orbit_navigation_state.cpp  orbit_navigation_update.cpp
modules/navigation/tests/: CMakeLists.txt  orbit_navigation_anchor_depth_test.cpp  orbit_navigation_continuous_motion_test.cpp  orbit_navigation_keyboard_test.cpp  orbit_navigation_test.cpp  orbit_navigation_test_support.h
modules/picking/: CMakeLists.txt
modules/picking/src/: elf.picking.cppm  geometry_detail.h  service.cpp  service_geometry.cpp
modules/picking/tests/: CMakeLists.txt  picking_test.cpp
modules/renderer/: CMakeLists.txt
modules/renderer/src/: elf.renderer.cppm  gpu_picking.cpp  model_rendering.cpp  render_list.cpp  renderer.cpp
modules/renderer/tests/: CMakeLists.txt  renderer_frustum_test.cpp  renderer_layout_test.cpp  renderer_test.cpp  renderer_test_support.h
modules/scene/: CMakeLists.txt
modules/scene/src/: elf.scene.cppm  import_builder.cpp  runtime_adapter.cpp  scene.cpp  spatial.cpp  storage.cpp  visibility.cpp
modules/scene/tests/: CMakeLists.txt  runtime_adapter_depth_test.cpp  scene_test.cpp
modules/tests/: CMakeLists.txt  domain_test_driver.cpp  foundation_test_driver.cpp  import_test_driver.cpp  model_test_driver.cpp  tools_test_driver.cpp  view_test_driver.cpp
modules/tools/clipping/: CMakeLists.txt
modules/tools/clipping/src/: clipping_controller.cpp  elf.tool.clipping.cppm
modules/tools/clipping/tests/: CMakeLists.txt  clipping_controller_test.cpp
modules/tools/measurement/: CMakeLists.txt
modules/tools/measurement/src/: distance_measurement.cpp  elf.tool.measurement.cppm
modules/tools/measurement/tests/: CMakeLists.txt  measurement_test.cpp
modules/tools/selection/: CMakeLists.txt
modules/tools/selection/src/: elf.tool.selection.cppm  selection_controller.cpp
modules/tools/selection/tests/: CMakeLists.txt  selection_test.cpp
modules/tools/visibility/: CMakeLists.txt
modules/tools/visibility/src/: elf.tool.visibility.cppm  visibility_controller.cpp
modules/tools/visibility/tests/: CMakeLists.txt  visibility_test.cpp
modules/viewport/: CMakeLists.txt
modules/viewport/src/: elf.viewport.cppm  offscreen_viewport.cpp  offscreen_viewport_picking.cpp  offscreen_viewport_render_settings.cpp
modules/viewport/tests/: CMakeLists.txt  offscreen_viewport_test.cpp  offscreen_viewport_test_support.h
tests/: CMakeLists.txt  gltf_corpus_probe.cpp  model_quick_test.cpp  module_import_smoke.cpp  opengl_render_smoke_test.cpp  public_api_test.cpp
tests/fixtures/: textured_pbr.gltf
tests/fixtures/elf3d_smoke/: README.md  elf3d_smoke.gltf
tools/render-benchmark/: CMakeLists.txt  render_benchmark.cpp
(+158 files in other folders)
